# pycookie

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: README.md
{{cookiecutter.directory_name}}/.github/workflows/: black.yaml  mypy.yaml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/workflows/: black.yaml  mypy.yaml  tests.yaml
